// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
<div
  className="w-full"
>
  <label
    className="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-1"
    htmlFor="test"
  >
    Testing
  </label>
  <div
    className="relative"
  >
    <select
      className="block appearance-none w-full bg-gray-200 border text-gray-700 py-2 px-2 md:px-3 md:py-2 rounded leading-tight focus:outline-none focus:shadow-outline focus:bg-white focus:border-gray-500 "
      id="test"
      name="test"
      onChange={[MockFunction]}
      value=""
    >
      <option
        data-name="Test 1"
        value="test-1"
      >
        Test 1
      </option>
      <option
        data-name="Test 2"
        value="test-2"
      >
        Test 2
      </option>
      <option
        data-name="Test 3"
        value="test-3"
      >
        Test 3
      </option>
    </select>
    <div
      className="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
    >
      <svg
        className="fill-current h-4 w-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select renders value correctly 1`] = `
<div
  className="w-full"
>
  <label
    className="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-1"
    htmlFor="test"
  >
    Testing
  </label>
  <div
    className="relative"
  >
    <select
      className="block appearance-none w-full bg-gray-200 border text-gray-700 py-2 px-2 md:px-3 md:py-2 rounded leading-tight focus:outline-none focus:shadow-outline focus:bg-white focus:border-gray-500 "
      id="test"
      name="test"
      onChange={[MockFunction]}
      value="test-2"
    >
      <option
        data-name="Test 1"
        value="test-1"
      >
        Test 1
      </option>
      <option
        data-name="Test 2"
        value="test-2"
      >
        Test 2
      </option>
      <option
        data-name="Test 3"
        value="test-3"
      >
        Test 3
      </option>
    </select>
    <div
      className="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
    >
      <svg
        className="fill-current h-4 w-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
